Thu Oct 10 15:04:05 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/pool/main.c src/pool/member.c:
	- Make some local functions static, and provide prototypes.

Thu Oct 10 13:09:03 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/Makefile.am doc/userguide.sgml:
	- Build and install the pool server by default.
	- Update tdspool documentation.  Remove build/install
	  instructions since that is now done by default.
	  Emphasize TDS 4.2 configuration restrictions.

Thu Oct 10 11:37:53 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/odbc/convert_tds2sql.c:
	- Remove unused variable.

Thu Oct 10 11:35:28 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/config.c:
	- Bug fix, printf was used where fprintf was intended.

Thu Oct 10 10:47:19 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/pool/Makefile.am:
	- Distribute and install pool.conf.

Wed Oct  9 16:56:37 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* freetds.conf interfaces
	  src/pool/pool.conf (added):
	- Add sample pool configuration.

Wed Oct  9 16:36:26 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* samples/.cvsignore:
	- Ignore generated files.

Wed Oct  9 16:34:05 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/dbutil.c:
	- Provide Microsoft-compatible behavior when MSDBLIB is defined
	  and a user-installed error handler returns INT_CONTINUE
	  from an error handler that received an error other than
	  SYBETIME.

Wed Oct  9 13:04:04 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* Makefile.am configure.in
	  samples/Makefile.am (added) 
	  samples/unixodbc.freetds.driver.template.in (added)
	  samples/unixodbc.install.sh (added)
	  samples/unixodbc.jdbc.datasource.template (added)
	- Add example unixODBC configuration data and script.

Mon Oct  9 12:18:15 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsconvert.h include/tdsodbc.h src/odbc/convert_sql2string.c:
	* src/odbc/convert_tds2sql.c src/odbc/odbc.c src/tds/convert.c: