@@ -1,3 +1,8 @@
+Fri Oct 11 10:45:12 EDT 2002	nsc <Nicholas_Castellano@acml.com>
+	* configure.in src/replacements/vasprintf.c:
+	- Add autoconf header test for paths.h.  Use _PATH_DEVNULL
+	  instead of hardcoding "/dev/null".
+
 Thu Oct 10 15:04:05 EDT 2002	nsc <Nicholas_Castellano@acml.com>
 	* src/pool/main.c src/pool/member.c:
 	- Make some local functions static, and provide prototypes.
